--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@
             <p>Автомобиль премиум класса дающий в рот BUGATTI.</p>
           </div>
         </div>
+
+                <div class="car-card card-glow">
+          <img src="banya.png" alt="CocaCola Zero">
+          <div class="car-info">
+            <h3>Банная роскошь</h3>
+            <p>В этой машине - горячо 🔥</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -175,7 +183,10 @@
           <h3>Хохлома</h3>
           <p><span class="currency">$</span> 670 000</p>
         </div>
-      </div>
+        <div class="model-card card-glow">
+          <h3>Банная роскошь</h3>
+          <p><span class="currency">$</span> По договоренности</p>
+        </div>
     </div>
   </section>
 
@@ -234,6 +245,12 @@
         <strong>Ира, Минск</strong>
       </div>
 
+        <div class="review-card card-glow">
+          <img src="review3.png" alt="Отзыв 2">
+          <p>⭐️⭐️⭐️⭐️⭐️<br>Так, как эта машина, меня не жарил никто</p>
+        <strong>Ксения, Бор</strong>
+      </div>
+        
 <!-- ВИДЕО ОТЗЫВ -->
 <div class="video-review">
   <div class="video-frame">
