--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
 
                 <div class="car-card card-glow">
-          <img src="banya.png" alt="CocaCola Zero">
+          <img src="banya.png" alt="banya">
           <div class="car-info">
             <h3>Банная роскошь</h3>
             <p>В этой машине - горячо 🔥</p>
